--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "connect-multiparty": "^2.2.0",
+    "download-file": "^0.1.5",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
+    "mime": "^2.4.6",
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.6"
